@@ -4,6 +4,7 @@ import java.io.FileNotFoundException;
 import java.io.FileOutputStream;
 import java.io.OutputStream;
 import java.util.Collection;
+import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import student.model.IAnimalModel;
@@ -75,14 +76,14 @@ public class AnimalJamController implements IAnimalController {
     @Override
     public Collection<AnimalRecord> filter(String str, Columns sortOn, boolean ascending) {
         //check if filtered list is empty than filter on Collection
-        if (filteredList.size() == 0) {
+        if ( (filteredList == null) || (filteredList.size() == 0) ) {
             filteredList = getCollection();
         }
         //Split multiple filters that are comman seperated
         String[] filters = str.split(",");
         //iterate over each filter to be applied on the list
         for(String f : filters) {
-            filteredList = filterSingle(f).toList();
+            filteredList = filterSingle(f).collect(Collectors.toList());
         }
 
         return filteredList;
